Change slice parameter to plural
