# openapi/esmf.json
@@ -146,7 +146,7 @@
             }
           },
           {
-            "name": "slice",
+            "name": "slices",
             "in": "query",
             "description": "The slices to reserve. The service will set the slice ids.",
             "required": true,
@@ -197,7 +197,7 @@
             }
           },
           {
-            "name": "id",
+            "name": "ids",
             "in": "query",
             "description": "The ids of the slices to be deleted.",
             "required": true,
